<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_lowstates</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="beatriz@todo.todo">beatriz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>controller_interface</depend>
  <depend>go2_interfaces</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

   <test_depend>controller_interface</test_depend>
  <test_depend>pluginlib</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
